<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scribbles</string>
    <string name="menu_settings">Settings</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="title_activity_welcome_screen">Scribbles</string>
    <string name="welcome_text">Enter Your Names Below</string>
    <string name="text_field_enter_name">Enter Your Name Here</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_draw">Draw</string>
    <string name="button_color">Color</string>
    <string name="begin_game">Begin</string>
    <string name="button_done">Done</string>
    <string name="title_activity_color_select">Select A Color</string>
    <string name="msu">MSU</string>
    <string name="animal">Animal</string>
    <string name="object">Object</string>
    <string name="building">Building</string>
    <string name="action">Action</string>
    <string name="topic">Topic: </string>
    <string name="hint">Hint: </string>
    <string name="title_activity_guess">Guess</string>
    <string name="answer">"Answer: "</string>
    <string name="title_activity_final_score">Final Score</string>
    <string name="final_score">Final Score</string>
    <string name="move">Move</string>
    <string name="draw">Draw</string>
    <string name="guess">Guess:</string>
    <string name="enter_guess">Enter Guess Here!</string>
    <string name="category">Category:</string>
    <string name="timer">Timer</string>
    <string name="artist">Artist:</string>
    <string name="guessing">Guessing:</string>
    <string name="new_game">New Game</string>
    <string name="howToPlay">How To Play</string>
    <string name="title_activity_how_to_play">Instructions</string>
    <string name="dialog_box_warning">This will bring you back to the home screen and end this game. Are you sure you want to quit?</string>
    <string name="dialog_box_title">Really quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="explanation1">Enter the two players\' names at the welcome screen, and press Begin to start. Player 1 will be the first to draw and Player 2 will be the first to guess. \n \n \nThere is a button to select the pen color, and a small menu to select its thickness. The player who is drawing can draw by touching the area inside the green rectangle. You can press the \&quot;Move\&quot; button to switch to move mode, which will allow you to resize and rotate the image. To return to drawing mode, simply press the &quot;Draw&quot; button that appears while in move mode. When the player who is drawing has finished, press the \&quot;Done\&quot; button and pass the device to the other player. \n \n \nThe guessing player will have 2 minutes and 10 seconds to guess what the drawing is. Enter what you think the drawing is into the &quot;Guess&quot; box, and press &quot;Done&quot;. The hint will appear after 1 minute and 10 seconds. If the guessing player guesses correctly within this time without the hint appearing, they will receive 50 points. If they guess correctly, but the hint has appeared, they will receive 25 points. Regardless of whether they get points or not, after the guessing player finishes, a new round begins where the guesser becomes the drawer and vice-versa. \n \n \nThe first player to 500 points wins!</string>
    <string name="answer_hint_dialog_title">Information Needed</string>
    <string name="answer_hint_dialog_text">Please enter both an answer and a hint before proceeding.</string>
    <string name="out_of_time_warning">You ran out of time!</string>
    <string name="out_of_time_title">Time Expired</string>
    <string name="incorrect_guess_warning">Sorry, you were wrong. Try again!</string>
    <string name="incorrect_guess_title">Incorrect Guess</string>
    <string name="clear">Clear Drawing</string>
    <string name="clear_warning_title">Really clear?</string>
    <string name="clear_warning_text">Are you sure you want to completely clear your drawing?</string>
    <string name="drawing_warning_text">You forgot to draw something! Please draw something before proceeding.</string>
    <string name="drawing_warning_title">Please Draw Something</string>

    <color name="white">#FFFFFF</color>
    <color name="green">#18453b</color>

    <string name="score">Score</string>
    <string name="title_activity_new_user">New User</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="newUser">New User</string>
    <string name="submit">Submit</string>
    <string name="rememberMe">Remember Me</string>
    <string name="login_fail">Log in failed.</string>
    <string name="login_success">Log in successful!</string>
    <string name="new_user_fail">User creation failed.</string>
    <string name="new_user_success">User successfully created!</string>
    <string name="PasswordConfirm">Confirm Password</string>
    <string name="saving_fail">Failed to save drawing to server.</string>
    <string name="saving_success">Drawing saved to server.</string>
    <string name="confirm_password_fail">Passwords do not match.</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="leaderboardmember">leaderboardmember</string>
    <string name="back">Back</string>
    <string name="loading_fail">Failed to load drawing</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="PlayRound">Play a Round!</string>
    <string name="playTurn">Take a Turn!</string>
    <string name="leaderboard_fail">Unable to load leaderboard.</string>
    <string name="notification_request">Notification Request</string>
    <string name="empty"></string>
    <string name="play_turn">Play Turn</string>
    <string name="loggedIn">Logged in as:</string>
    <string name="user">"User: "</string>

</resources>