<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeScreen" 
    android:background="@color/green">

    <FrameLayout
        android:id="@+id/welcomeFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/nameEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/player1Frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/player1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/player1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/player1TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textImeMultiLine"
            android:hint="@string/text_field_enter_name" 
            android:textColor="@color/white">

            
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/player2Frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/player2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/player2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/player2TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textImeMultiLine"
            android:textColor="@color/white"
            android:hint="@string/text_field_enter_name" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/spacer3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <Button
            android:id="@+id/button_how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="onHowToPlay"
            android:text="@string/howToPlay"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onBegin"
            android:text="@string/begin_game" 
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>